# nostr-relay-tester

./: Cargo.toml  README.md
.github/workflows/: clippy.yml
src/: config.rs  lib.rs  main.rs  nip01.rs  nip09.rs
src/tests/: logger.rs  mod.rs  nip01.rs  nip02.rs  nip09.rs  report.rs
