[package]
name = "nostr-relay-tester"
authors = ["Proudmuslim <proudmuslim-dev@protonmail.com>"]
description = "A nostr relay tester."
license = "MIT"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nostr = "0.26"
nostr-sdk = { version = "0.26", features = ["all-nips"] }
clap-serde-derive = "0.2.1"
tracing-subscriber = "0.3"
color-eyre = "0.6"
toml = "0.8.8"
lazy_static = "1.4.0"
tracing = "0.1.40"

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "fs"]

[dependencies.clap] 
version = "4.4.12"
features = ["derive"] 

[dependencies.serde] 
version = "1.0.194" 
features = ["derive"]

[dependencies.url]
version = "2.5"
features = ["serde"]
